--- a/styles/assignment.css
+++ b/styles/assignment.css
@@ -1,1 +1,67 @@
-header{background-color: aqua;}
+header .header-bgi{height: 900px;
+                         background-image: 
+                             url(../styles/images/banner/banner3.png); 
+                 background-repeat: no-repeat;background-size: cover;} 
+
+.header-title{text-align: right;} 
+.header-subtitle{ position: absolute; width: 525px;
+                                      height: 228px;
+                                      left: 1045px;
+                                      top: 190px;  
+                                     font-size: 65px;
+                                     font-weight: 700; 
+                                     font-family: 'Open Sans', sans-serif;
+                                 font-family: 'Work Sans', sans-serif;   
+                                     color:aliceblue
+                                   
+                                } 
+
+.header-description{            position: absolute;
+                                width: 494px;
+                                height: 78px;
+                                left: 1075px;
+                                top: 500px;
+                                font-family: 'Open Sans', sans-serif;
+                                font-family: 'Work Sans', sans-serif; 
+                                color:aliceblue 
+                                
+                     
+                            } 
+
+.header-btn{                     position: absolute;
+                                 top:670px;
+                                 right:319px ;
+                                font-size: 24px;
+                                border: 1px solid white;width: 170px;
+                                height: 70px;
+                                border-radius: 10px;
+                                font-family: 'Open Sans', sans-serif;
+                                font-family: 'Work Sans', sans-serif;
+                                color: rgb(57, 120, 238); 
+                                box-shadow: 7px 7px 5px rgba(9, 0, 0, 
+                                                                    0.415);
+                 }
+
+
+
+.nav-bar ul{                     display:flex;                           }
+
+.nav-bar ul li{                  list-style: none;                       }
+
+.nav-bar ul li a{               padding: 10px; 
+                                font-size: 20px;
+                                text-decoration: none; 
+                                position:relative;  
+                                left: 1200px; 
+                                top: 20px;      }
+
+.nav-bar ul li a span{          border: 1px solid #0256A2;
+                                background-color:white;
+                                border-radius: 10px;
+                                padding:8px;
+                                margin: 8px; 
+                                color:rgb(57, 120, 238);  
+                                font-family: 'Open Sans', sans-serif;
+                                font-family: 'Work Sans', sans-serif;
+                                box-shadow: 7px 7px 5px rgba(9, 0, 0, 
+                                0.415);}
