--- a/styles/assignment.css
+++ b/styles/assignment.css
@@ -129,5 +129,17 @@ h3{                         font-weight: 500;
                              font-size: 20px;
                              color: #737272; 
                              padding-left: 50px; 
-                             }
+                             } 
 
+                             /* gradiant color apply */
+
+
+.gradiant-color{        background-image: linear-gradient(90deg, #005FAC 0%, rgba(0, 95, 172, 0) 100%),url(../styles/images/watch.png);
+
+                        background-repeat: no-repeat;
+                        background-size: cover;   
+                        height: 400px;
+                        width: 1440px; margin:200px 200px; 
+       }
+
+    
