--- a/styles/assignment.css
+++ b/styles/assignment.css
@@ -108,8 +108,8 @@ span{                        color:rgb(8, 248,8);
 
 .web-learning{display: flex; align-items: center;justify-content: center;}
 
-.plan-styles{             margin-left: 100px; 
-                          margin-right: 100px; 
+.plan-styles{             margin-left: 50px; 
+                          margin-right: 30px; 
                           margin-top: 30px; 
                           font-family: 'Open Sans', sans-serif;
                           font-family: 'Work Sans', sans-                   
@@ -117,7 +117,7 @@ span{                        color:rgb(8, 248,8);
                         border:1px solid white;
                         background-color:whitesmoke;
                          box-shadow: 7px 7px 7px rgba(9, 0, 0, 
-                         0.415);padding-left: 7px; height: 350px; width: 600px;
+                         0.415);padding-left: 7px; height: 450px; width: 500px;
                     } 
 
 .plan-name{                  font-weight: 600;
@@ -141,5 +141,57 @@ h3{                         font-weight: 500;
                         height: 400px;
                         width: 1440px; margin:200px 200px; 
        }
+                    /* footer styles */ 
+
+.footer-contact{background-color: black; 
+                width: auto;
+                height: 700px;
+                
+}
+
+.contact-container{display: flex;}  
+.footer-title{          margin-left: 200px; 
+                        font-family: 'Open Sans', sans-serif;
+                        font-family: 'Work Sans', sans-                   
+                                                serif;
+                        font-weight: 700;
+                        font-size: 45px;
+                        color: white; 
+                        margin-top: 200px; 
+
+}   
+
+.footer-description{ margin-left:200px ;
+                     font-family: 'Open Sans', sans-serif;
+                     font-family: 'Work Sans', sans-                   
+                                              serif;
+
+                    color: #FFFFFF;  
+                    margin-right: 300px;
+                } 
+                h2{margin-right: 400px;
+                color: white;  
+                 margin-top: 250px;}
+
+                input{ border: 1px solid white;
+                       background-color: black;
+                       width: 250px;height: 20px;
+                       padding: 20px; font-size: 20px;
+                       border-radius: 25px;
+                }
+.subscribe-btn{border: 1px soliid white; 
+               width: 150px;
+                 height: 25px;
+                 padding: 20px;font-size: 20px;
+                 padding-bottom: 38px; 
+                 background-color: #005FAC;
+                  color: #FFFFFF; 
+                  border-radius: 20px;
+                  
+                } 
+
+.call-text{color:white;margin-left: 200px;} 
+
+.social-link{margin-left: 200px;}
 
     
