--- a/styles/assignment.css
+++ b/styles/assignment.css
@@ -179,7 +179,8 @@ h3{                         font-weight: 500;
                        background-color: black;
                        width: 250px;height: 20px;
                        padding: 20px; font-size: 20px;
-                       border-radius: 25px;
+                       border-radius: 25px; 
+                       color: #FFFFFF;
                 }
 .subscribe-btn{border: 1px soliid white; 
                width: 150px;
