--- a/styles/assignment.css
+++ b/styles/assignment.css
@@ -3,6 +3,8 @@ header .header-bgi{height: 900px;
                              url(../styles/images/banner/banner3.png); 
                  background-repeat: no-repeat; 
                  background-size: cover;} 
+                 
+                
 
                  
 
@@ -220,7 +222,7 @@ h3{                         font-weight: 500;
                  height: 25px;
                  padding: 20px;font-size: 20px;
                  padding-bottom: 38px; 
-                 background-color: #005FAC;
+                 background-color: red;
                   color: #FFFFFF; 
                   border-radius: 20px;
                   
