--- a/styles/assignment.css
+++ b/styles/assignment.css
@@ -2,7 +2,8 @@ header .header-bgi{height: 900px;
                          background-image: 
                              url(../styles/images/banner/banner3.png); 
                  background-repeat: no-repeat; 
-                 background-size: cover;} 
+                 background-size: cover; 
+                width: 1850px;} 
                  
                 
 
@@ -35,7 +36,7 @@ header .header-bgi{height: 900px;
 
 .header-btn{                     position: absolute;
                                  top:670px;
-                                 right:319px ;
+                                 right:100px ;
                                 font-size: 24px;
                                 border: 1px solid white;width: 170px;
                                 height: 70px;
